Documents partitioning.
